# carbonwatch

./: .env.example  .gitignore  .nojekyll  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.claude/: launch.json
data/processed/: daily_windows.parquet  de_backtest_mae.parquet  de_ci_hourly.parquet  de_forecast_2025.parquet  de_generation_hourly.parquet  de_sim_daily.parquet  example_day.parquet  heatmap_de.parquet  heatmap_uk.parquet  spatial_sim.parquet  uk_backtest_mae.parquet  uk_ci_hourly.parquet  uk_forecast_2025.parquet  uk_sim_daily.parquet
notebooks/: 01_uk_experiment.py  02_de_pipeline.py  03_de_experiment.py  04_descriptive.py  05_readme_figure.py
site/: _quarto.yml  index.qmd  theme-berlin.scss
site/_freeze/index/execute-results/: html.json
site_libs/bootstrap/: bootstrap-a0b1d0b70a6b0b8fd8337fa0f762cc82.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-dark-05b58d1c8cb16a4533138729c22164e8.css
src/carbonwatch/: __init__.py  carbon_intensity.py  config.py  features.py  fetch_energy_charts.py  fetch_entsoe.py  fetch_uk.py  forecast.py  schedule_sim.py  viz.py
tests/: test_carbon_intensity.py  test_fetch_uk.py  test_schedule_sim.py
